# MoonTV

./: .eslintrc.js  VERSION.txt  config.json  next.config.js  package.json  pnpm-lock.yaml  调试注册问题指南.md
public/: manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: layout.tsx
src/app/admin/: page.tsx
src/app/api/debug/env/: route.ts
src/app/api/register/: route.ts
src/app/api/search/: route.ts
src/app/login/: page.tsx
src/app/play/: page.tsx
src/app/search/: page.tsx
src/components/: MobileHeader.tsx  PageLayout.tsx  UserMenu.tsx  VersionPanel.tsx  VideoCard.tsx
src/lib/: api-config.ts  db.client.ts  douban.client.ts  env-validation.ts  storage-adapter.ts  upstash.db.ts  version.ts
